first try - crashes in tests